Compiler/src/com/parse/Parser.java
package com.parse;

import java.util.ArrayList;
import java.util.Map;

import com.lexical.LexicalAnalyzerConstants;
import com.lexical.Token;

public class Parser/*@bgen(jjtree)*/implements ParserTreeConstants, LexicalAnalyzerConstants {/*@bgen(jjtree)*/
  protected JJTParserState jjtree = new JJTParserState();

  final public SimpleNode program(Map<String, Integer> tokenCountMap) throws ParseException {
 /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Integer weight = 0;
  Integer count  = 0;
  Integer[] subWeight;
    try {
      subWeight = mainClass();
    weight += subWeight[0];
    count  += subWeight[1];
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        subWeight = classDecl();
      weight += subWeight[0];
      count  += subWeight[1];
      }
    tokenCountMap.put("$weight$", weight);
    tokenCountMap.put("$count$", count);
    {if (true) return jjtn000;}
      jj_consume_token(0);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public Integer[] mainClass() throws ParseException {
 /*@bgen(jjtree) MainClass */
  SimpleNode jjtn000 = new SimpleNode(JJTMAINCLASS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Integer subWeight = 0;
  Integer count = 0;
  Integer[] temp;
    try {
      _class();
      id();
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        temp = varOrMethodDecl();
      subWeight += temp[0];
      count += temp[1];
      }
      _static();
      _void();
      _main();
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACE:
        case BOOLEAN:
        case IF:
        case WHILE:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        temp = statement();
      subWeight += temp[0];
      count += temp[1];
      }
      jj_consume_token(RBRACE);
      jj_consume_token(RBRACE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new Integer[]{subWeight, count};}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public Integer[] classDecl() throws ParseException {
 /*@bgen(jjtree) ClassDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTCLASSDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Integer subWeight = 0;
  Integer count = 0;
  Integer[] temp;
    try {
      _class();
      id();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EXTENDS:
        _extends();
        id();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
        case ID:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        temp = varOrMethodDecl();
      subWeight += temp[0];
      count += temp[1];
      }
      jj_consume_token(RBRACE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new Integer[]{subWeight, count};}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public Integer[] varOrMethodDecl() throws ParseException {
 /*@bgen(jjtree) VarOrMethodDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTVARORMETHODDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Integer subWeight = 0;
  Integer count = 0;
  Integer[] temp;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        type();
        break;
      case ID:
        id();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
      case ASSIGN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SEMICOLON:
          jj_consume_token(SEMICOLON);
          break;
        case ASSIGN:
          assign();
          try {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER_LITERAL:
          case LONG_LITERAL:
          case LPAREN:
          case NOT:
          case FALSE:
          case NEW:
          case THIS:
          case TRUE:
          case ID:
            exp();
            break;
          case LSQPAREN:
            jj_consume_token(LSQPAREN);
            expList();
            jj_consume_token(RSQPAREN);
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          }
          catch (ParseException pe){
        	  if (pe.errorcode == ParseException.NONE_ERROR_CODE || 
              	  pe.errorcode == ParseException.MISSING_CLOSEPAR ||
              	  pe.errorcode == ParseException.MISSING_CLOSESQPAR ||
              	  pe.errorcode == ParseException.MISSING_CLOSEBRACE){
        		  throw new ParseException(token, ParseException.ERROR_AT_ASSIGNMENT);
        	  }
        	  throw pe;
          }
          jj_consume_token(SEMICOLON);
        {if (true) return new Integer[]{1, 1};}
          break;
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
      {if (true) return new Integer[]{0, 0};}
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        formalList();
        jj_consume_token(RPAREN);
        jj_consume_token(LBRACE);
        preDecl();
        postDecl();
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACE:
          case BOOLEAN:
          case IF:
          case WHILE:
          case INTEGER:
          case LONG:
          case ID:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_5;
          }
          temp = statement();
                  subWeight += temp[0];
                  count += temp[1];
        }
        _return();
        exp();
                subWeight += 1;
                count += 1;
        jj_consume_token(SEMICOLON);
        jj_consume_token(RBRACE);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return new Integer[]{subWeight, count};}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public Integer[] mid_varDecl() throws ParseException {
 /*@bgen(jjtree) VarDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      type();
      id();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      case ASSIGN:
        assign();
        try{
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER_LITERAL:
        case LONG_LITERAL:
        case LPAREN:
        case NOT:
        case FALSE:
        case NEW:
        case THIS:
        case TRUE:
        case ID:
          exp();
          break;
        case LSQPAREN:
          jj_consume_token(LSQPAREN);
          expList();
          jj_consume_token(RSQPAREN);
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        }
        catch (ParseException pe){
      	  if (pe.errorcode == ParseException.NONE_ERROR_CODE || 
      		  pe.errorcode == ParseException.MISSING_CLOSEPAR ||
      		  pe.errorcode == ParseException.MISSING_CLOSESQPAR ||
      		  pe.errorcode == ParseException.MISSING_CLOSEBRACE){
      		  throw new ParseException(token, ParseException.ERROR_AT_ASSIGNMENT);
      	  }
      	  throw pe;
        }
        jj_consume_token(SEMICOLON);
        {if (true) return new Integer[]{1, 1};}
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return new Integer[]{0, 0};}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void formalList() throws ParseException {
 /*@bgen(jjtree) FormalList */
  SimpleNode jjtn000 = new SimpleNode(JJTFORMALLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        type();
        break;
      case ID:
        id();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
          type();
          break;
        case ID:
          id();
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        id();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void preDecl() throws ParseException {
 /*@bgen(jjtree) PreDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTPREDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      pre();
      jj_consume_token(COLON);
      exp();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void postDecl() throws ParseException {
 /*@bgen(jjtree) PostDecl */
  SimpleNode jjtn000 = new SimpleNode(JJTPOSTDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      post();
      jj_consume_token(COLON);
      exp();
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void type() throws ParseException {
 /*@bgen(jjtree) Type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_1(3)) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
          integerArray();
          break;
        case LONG:
          longArray();
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BOOLEAN:
        case INTEGER:
        case LONG:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER:
            integer();
            break;
          case LONG:
            _long();
            break;
          case BOOLEAN:
            _boolean();
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public Integer[] statement() throws ParseException {
 /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Integer[] temp;
  Integer subWeight = 0;
  Integer count = 0;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case LONG:
        temp = mid_varDecl();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return temp;}
        break;
      case LBRACE:
        jj_consume_token(LBRACE);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACE:
          case BOOLEAN:
          case IF:
          case WHILE:
          case INTEGER:
          case LONG:
          case ID:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_7;
          }
          temp = statement();
      subWeight += temp[0];
      count += temp[1];
        }
        jj_consume_token(RBRACE);
              jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
             {if (true) return new Integer[]{subWeight, count};}
        break;
      case IF:
        _if();
        jj_consume_token(LPAREN);
        exp();
        jj_consume_token(RPAREN);
        temp = statement();
    subWeight = temp[0];
    count += temp[1];
        _else();
        temp = statement();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    subWeight += temp[0];
    count += temp[1];
    subWeight = subWeight * 2;
    {if (true) return new Integer[]{subWeight, count};}
        break;
      case WHILE:
        _while();
        jj_consume_token(LPAREN);
        exp();
        jj_consume_token(RPAREN);
        temp = statement();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    subWeight = temp[0] * 4;
    count = temp[1];
    {if (true) return new Integer[]{subWeight, count};}
        break;
      case ID:
        id();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
          id();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SEMICOLON:
            jj_consume_token(SEMICOLON);
            break;
          case ASSIGN:
            assign();
            try{
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INTEGER_LITERAL:
            case LONG_LITERAL:
            case LPAREN:
            case NOT:
            case FALSE:
            case NEW:
            case THIS:
            case TRUE:
            case ID:
              exp();
              break;
            case LSQPAREN:
              jj_consume_token(LSQPAREN);
              expList();
              jj_consume_token(RSQPAREN);
              break;
            default:
              jj_la1[19] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            }
            catch (ParseException pe){
          	  if (pe.errorcode == ParseException.NONE_ERROR_CODE || 
              	  pe.errorcode == ParseException.MISSING_CLOSEPAR ||
                  pe.errorcode == ParseException.MISSING_CLOSESQPAR ||
                  pe.errorcode == ParseException.MISSING_CLOSEBRACE){
          		  throw new ParseException(token, ParseException.ERROR_AT_ASSIGNMENT);
          	  }
          	  throw pe;
            }
            jj_consume_token(SEMICOLON);
                {if (true) return new Integer[]{1, 1};}
            break;
          default:
            jj_la1[20] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        jjtree.closeNodeScope(jjtn000, true);
        jjtc000 = false;
        {if (true) return new Integer[]{0, 0};}
          break;
        case LSQPAREN:
        case ASSIGN:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ASSIGN:
            assign();
            try{
            	exp();
            }
            catch (ParseException pe){
          	  if (pe.errorcode == ParseException.NONE_ERROR_CODE || 
              	  pe.errorcode == ParseException.MISSING_CLOSEPAR ||
              	  pe.errorcode == ParseException.MISSING_CLOSESQPAR ||
              	  pe.errorcode == ParseException.MISSING_CLOSEBRACE){
          		  throw new ParseException(token, ParseException.ERROR_AT_ASSIGNMENT);
          	  }
          	  throw pe;
            }
            jj_consume_token(SEMICOLON);
            break;
          case LSQPAREN:
            jj_consume_token(LSQPAREN);
            exp();
            jj_consume_token(RSQPAREN);
            assign();
            try{
            	exp();
            }
            catch (ParseException pe){
          	  if (pe.errorcode == ParseException.NONE_ERROR_CODE || 
          		  pe.errorcode == ParseException.MISSING_CLOSEPAR ||
                  pe.errorcode == ParseException.MISSING_CLOSESQPAR ||
                  pe.errorcode == ParseException.MISSING_CLOSEBRACE){
          		  throw new ParseException(token, ParseException.ERROR_AT_ASSIGNMENT);
          	  }
          	  throw pe;
            }
            jj_consume_token(SEMICOLON);
            break;
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
        {if (true) return new Integer[]{1, 1};}
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
